Add statamic files

--- a/.env
+++ b/.env
@@ -2,7 +2,10 @@ APP_NAME=Statamic
 
 APP_KEY=base64:vbTeO9CT+ml9XefEuMOVCGZ4K1wa4LfT+VE1hGEIKRo=
 
-APP_URL=http://rent0.2.test/
+APP_URL=https://armonie.onrender.com
+ASSET_URL=https://armonie.onrender.com
+
+FILESYSTEM_DISK=cloud
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -34,7 +37,7 @@ SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
+
 QUEUE_CONNECTION=sync
 
 CACHE_STORE=file
